# python-learn

./: 01-base.md  02-sqlite.md  03-chroma.md  033-retry.md  034-exceptions.md  04-repl.md  05-unstructured.md  06-timeit.md  07-cache.md  08-with.md  09-callable.md  10-setup-jupyterlab-formatter.md  11-type-checking.md  12-decorator.md  13-nb-mypy.ipynb  14-pydantic.ipynb  15-fixing-jupyterlab-kernel-mismatch.ipynb  15-kernel.md  16_pandas.ipynb  17-python-console.md  18-jupyterlab-installations.md  19-visual-studio.md  20-enum.md  21-eval.md  22-list.md  23-poetry.md  24-jupyter-module.md  25-protocol.md  26-constructor.md  27-numpy.md  28-useful-decorators.md  29-faiss-colab.md  30-jupyter-shortcut.md  31-inspect-source-code.md  32-ignore-warnings.md  33-contextmanager.md  34-enum-hacks.md  35-run-once.md  36_print_jupyter_code.py  37_docstring.md  (+31 more)
calculator/: .coverage  Makefile  operation.py  operation_test.py
