[tool.poetry]
name = "python-learn"
version = "0.1.0"
description = ""
authors = ["alextanhongpin <alextan220990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"
coverage = "^7.3.3"
pytype = "^2023.12.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
